feat Block account endpoint added
